--- a/Description
+++ b/Description
@@ -1,1 +1,23 @@
 
+Handwritten Digit Recognition using Deep Learning
+
+This project aims to build a model that can accurately classify handwritten digits using a Convolutional Neural Network (CNN) built with TensorFlow and Keras.
+
+Data:
+- The dataset used for training and evaluation is the 'Handwriting Recognition' dataset from Kaggle.
+- The data is preprocessed and augmented using ImageDataGenerator to improve model robustness.
+
+Model:
+- The model is a sequential CNN consisting of convolutional layers, max-pooling layers, and dense layers.
+- The model architecture is designed to extract features from the images and classify them into 10 digit classes.
+
+Training:
+- The model is trained using the Adam optimizer and categorical cross-entropy loss function.
+- Early stopping is implemented to prevent overfitting and save training time.
+
+Evaluation:
+- The model's performance is evaluated on a separate test dataset using accuracy as the metric.
+
+Prediction:
+- The model can be used to predict the digit class of new handwritten images.
+""")
